# Matrix_Graphs_Searcher

./: Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFS.cpp  BestFS.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  DataForServer.cpp  DataForServer.h  FileCacheManager.cpp  FileCacheManager.h  ISearchable.cpp  ISearchable.h  ISearcher.cpp  ISearcher.h  MatrixInterpreter.cpp  MatrixInterpreter.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  SearchableSolver.cpp  SearchableSolver.h  Searcher.cpp  Searcher.h  Server.h  Solver.h  SolverToSearchable.h  State.cpp  State.h  StringReverser.cpp  (+6 more)
